plugins {
    id 'java'
}

group = 'site.gutschi.humble'
version = '0.0.1-SNAPSHOT'

ext {
    springBootVersion = '3.4.1'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}


allprojects {
    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'

    dependencies {
        implementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
        annotationProcessor platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.testcontainers:junit-jupiter'
        testImplementation 'org.assertj:assertj-core'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    test {
        useJUnitPlatform()
    }
}
